home page done + import img

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'Azonix';
+    src: url('../fonts/Azonix.otf');
+}
+
+html, body {
+    background-color: black;
+}
+
+#app {
+    font-family: Avenir, Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-align: center;
+    color: white;
+}
